nav fix folder page

--- a/_includes/general/navigation2.html
+++ b/_includes/general/navigation2.html
@@ -1,7 +1,8 @@
 <nav id="nav2">
-  <a href="{{site.baseurl}}/bloei-en-leef">Bloei en leef?</a>
-  <a href="{{site.baseurl}}/foodsafari">foodsafari</a>
-  <a href="{{site.baseurl}}/culinaire-fotografie">culinaire fotografie</a>
-  <a href="{{site.baseurl}}/agenda">agenda</a>
-  <a href="{{site.baseurl}}/partners">partners</a>
+  <a href="{{site.baseurl}}/page/bloei-en-leef">Bloei en leef?</a>
+  <a href="{{site.baseurl}}/page/bio-tuin">bio tuin</a>
+  <a href="{{site.baseurl}}/page/foodsafari">foodsafari</a>
+  <a href="{{site.baseurl}}/page/culinaire-fotografie">culinaire fotografie</a>
+  <a href="{{site.baseurl}}/page/agenda">agenda</a>
+  <a href="{{site.baseurl}}/page/partners">partners</a>
 </nav>
