--- a/_includes/pages/home/cards.html
+++ b/_includes/pages/home/cards.html
@@ -8,9 +8,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo" >
               <h3>Wat leuk dat jij Bloei en Leef gevonden hebt! We stellen ons graag aan jou voor</h3>
-              <a href="{{ site.baseurl }}/bloei-en-leef"><h4>lees meer</h4></a>
+              <a href="{{ site.baseurl }}/page/bloei-en-leef"><h4>lees meer</h4></a>
             </div>
-            <a href="{{ site.baseurl }}/bloei-en-leef"><h2>Bloei en Leef?</h2></a>
+            <a href="{{ site.baseurl }}/page/bloei-en-leef"><h2>Bloei en Leef?</h2></a>
           </div>
         </div>
 
@@ -20,9 +20,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Heb jij behoefte aan een weekend voor jezelf?</h3>
-              <a href="{{site.baseurl}}/weekenden-en-retraites"><h4>lees meer</h4></a>
+              <a href="{{site.baseurl}}/page/weekenden-en-retraites"><h4>lees meer</h4></a>
             </div>
-            <a href="{{site.baseurl}}/weekenden-en-retraites"><h2>weekenden & retraites</h2></a>
+            <a href="{{site.baseurl}}/page/weekenden-en-retraites"><h2>weekenden & retraites</h2></a>
           </div>
         </div>
       </div>
@@ -31,9 +31,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Wil je meer balans tussen lichaam, leven en werk?</h3>
-              <a href="{{ site.baseurl }}/"><h4>lees meer</h4></a>
+              <a href="{{ site.baseurl }}/page/coaching"><h4>lees meer</h4></a>
             </div>
-            <a href="{{ site.baseurl }}/coaching"><h2>coaching</h2></a>
+            <a href="{{ site.baseurl }}/page/coaching"><h2>coaching</h2></a>
           </div>
         </div>
       </div>
@@ -42,9 +42,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Dit is een Good Life & Foodsafari in één, vandaar de naam: Optimaal Gezond Safari</h3>
-              <a href="{{ site.baseurl }}/bio-tuin"><h4>lees meer</h4></a>
+              <a href="{{ site.baseurl }}/page/bio-tuin"><h4>lees meer</h4></a>
             </div>
-            <a href="{{ site.baseurl }}/bio-tuin"><h2>foodsafari</h2></a>
+            <a href="{{ site.baseurl }}/page/bio-tuin"><h2>foodsafari</h2></a>
           </div>
         </div>
       </div>
@@ -53,9 +53,9 @@
           <div onclick="" class="fadeCard">
             <div class="cardInfo">
               <h3>Wil jij weten wat er zoal te beleven valt per seizoen op het Bloei en Leef tuinderijtje?</h3>
-              <a href="{{ site.baseurl }}/bio-tuin"><h4>lees meer</h4></a>
+              <a href="{{ site.baseurl }}/page/bio-tuin"><h4>lees meer</h4></a>
             </div>
-            <a href="{{ site.baseurl }}/bio-tuin"><h2>bio-tuin</h2></a>
+            <a href="{{ site.baseurl }}/page/bio-tuin"><h2>bio-tuin</h2></a>
           </div>
         </div>
       </div>
