reatie form Recept blog en weetje

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -14,5 +14,7 @@ layout: default
       <p><strong>{{ page.intro }}</strong></p>
       {{ content }}
     </div>
+    <h5>Reageer hier op deze blog <strong>...{{ page.title }}...</strong></h5>
+    {% include forms/webReactie.html %}
   </div>
 </section>
