--- a/_layouts/recept.html
+++ b/_layouts/recept.html
@@ -37,6 +37,8 @@ layout: default
       <p><strong>{{ page.intro }}</strong></p>
       {{ content }}
     </div>
+    <h5>Reageer hier op dit recept <strong>...{{ page.title }}...</strong></h5>
+    {% include forms/webReactie.html %}
   </div>
 </section>
 
