--- a/_sass/general/footer.sass
+++ b/_sass/general/footer.sass
@@ -78,61 +78,4 @@ footer
         &:hover
           text-shadow: 2px 2px 3px black
 
-  #newsLetter
-    border-radius: $bl-border-radius
-    background-color: $bl-news-gray
-    padding: 10px
-    h3
-      margin-top: -5px
-      font-weight: bold
-
-    .radioContainer
-      display: flex
-      flex-direction: row
-      justify-content: space-around
-    textarea, input
-      width: 100%
-      box-sizing: border-box
-      border: 2px solid $bl-green
-      background-color: $bl-green
-      color: white
-      border-radius: $bl-border-radius-small
-
-    textarea
-      height: 160px
-      padding: 9px 10px
-      resize: vertical
-      &:focus
-        background-color: white
-        border: 2px solid $bl-green
-        outline: 0
-        color: $bl-text-color
-
-    input
-      height: 40px
-      padding: 0 10px
-      &:focus
-        background-color: white
-        border: 2px solid $bl-green
-        outline: 0
-        color: $bl-text-color
-    \::-webkit-input-placeholder
-      color: white
-    \:-moz-placeholder
-      color: white
-    \::-moz-placeholder
-      color: white
-    \:-ms-input-placeholder
-      color: white
-
-    .sendButtonContainer
-      margin-bottom: -10px
-      [type="submit"]
-        background-color: $bl-news-gray
-        border: 2px solid $bl-green
-        color: $bl-green
-        text-align: left
-        &:hover
-          background-color: $bl-green
-          border: 2px solid $bl-green
-          color: white
+// nieuwsbrief sass in _sass/forms/nieuwsbrief.sass
