--- a/_includes/general/footer.html
+++ b/_includes/general/footer.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6 col-sm-12">
-        <div id="newsLetter" class="gridSpace footerConect">
+        <div class="gridSpace footerConect">
           {% include forms/nieuwsbrief.html %}
         </div>
       </div>
