--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -41,5 +41,8 @@
 
 	<!-- Pulling in jQuery (online repository) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<!-- Pulling in matchHeight (online repository) -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
+
 
 </head>
