--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section id="blogSection">
   <div class="container">
-    <div id="pagetitleElement"style="background-image: url({{site.baseurl}}/img/blogs/{{page.imageName}})" class="titleElement">
+    <div class="pagetitleElement"style="background-image: url({{site.baseurl}}/img/blogs/{{page.imageName}})" class="titleElement">
       <h1>{{page.title}}</h1>
     </div>
     <div class="contentTitleInfo">
