--- a/_sass/general/page.sass
+++ b/_sass/general/page.sass
@@ -65,7 +65,7 @@ ul
 .lobster
   font-family: 'Lobster', cursive
 
-.titleElement
+.pagetitleElement
   background-position: center
   background-size: cover
   height: 50vh
@@ -78,6 +78,10 @@ ul
     align-self: center
     color: white
     text-shadow: 2px 2px 5px black, 2px -2px 5px black, -2px 2px 5px black, 0px 0px 15px black
+    cursor: pointer
+.noPageTitle
+  h1
+    display: none
 
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12
   padding: 0px
