--- a/_sass/pages/generalPage/general.sass
+++ b/_sass/pages/generalPage/general.sass
@@ -16,7 +16,7 @@
     margin-top: 35vh
     width: 95vw
     margin-left: auto
-    margin-right: auto 
+    margin-right: auto
 
   img
     display: inline
@@ -24,3 +24,9 @@
     max-width: 90vw
     margin: 0 auto
     border-radius: $bl-border-radius
+    cursor: zoom-in
+  .fullScreen
+    width: 100%
+    cursor: zoom-out
+    @media only screen and (max-width : 600px)
+      width: 200vw
