title element fix

--- a/_sass/general/page.sass
+++ b/_sass/general/page.sass
@@ -65,7 +65,7 @@ ul
 .lobster
   font-family: 'Lobster', cursive
 
-.pagetitleElement
+.titleElement , .pagetitleElement
   background-position: center
   background-size: cover
   height: 50vh
