--- a/_sass/pages/content/content.sass
+++ b/_sass/pages/content/content.sass
@@ -1,4 +1,4 @@
-//titleElement gets sass from _sass/general/page.sass
+//titleElement and pagetitleElement get sass from _sass/general/page.sass
 
 #receptSection, #weetjeSection, #blogSection
   .contentTitleInfo
@@ -29,7 +29,7 @@
         margin: 20px
         input
           margin: 0 20px
-          
+
     .completed
       color: gray
       text-decoration: line-through
