--- a/_sass/pages/generalPage/general.sass
+++ b/_sass/pages/generalPage/general.sass
@@ -25,8 +25,8 @@
     margin: 0 auto
     border-radius: $bl-border-radius
     cursor: zoom-in
+    transition: 0.5s
   .fullScreen
     width: 100%
     cursor: zoom-out
-    @media only screen and (max-width : 600px)
-      width: 200vw
+    transition: 0.5s
