--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -8,18 +8,15 @@
 
   <!-- Pulling is bootstrap (online repository) -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{site.baseurl}}{{url}}/img/fontIcons/styles.css">
-
+	  <!-- Pulling is bootstrap customfintIcons -->
+	<link rel="stylesheet" href="{{site.baseurl}}{{url}}/img/fontIcons/styles.css">
   <!-- Pulling in Font Awsome (online repository)  -->
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
 	<!-- Pulling in Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
-
   <!-- Pulling in AJ style (always after bootstrap) -->
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}{{url}}/css/styles.css">
-
 	<!-- favicon support -->
 	<link rel="apple-touch-icon" sizes="57x57" href="{{site.baseurl}}/favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="{{site.baseurl}}/favicon/apple-icon-60x60.png">
@@ -43,6 +40,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!-- Pulling in matchHeight (online repository) -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
-
+  <!-- Pulling in jQuery mobile (online repository)-->
 
 </head>
