--- a/_sass/pages/content/contentList.sass
+++ b/_sass/pages/content/contentList.sass
@@ -11,10 +11,7 @@
       flex-wrap: wrap
       .suffice
         margin-right: 20px
-    #searchIcon
-      align-self: flex-end
-      margin-left: auto
-      margin-bottom: auto
+    .searchIcon
       &:hover
         cursor: pointer
   .contentNav
