--- a/_layouts/recept.html
+++ b/_layouts/recept.html
@@ -40,6 +40,63 @@ layout: default
     <h5>Reageer hier op dit recept <strong>...{{ page.title }}...</strong></h5>
     {% include forms/webReactie.html %}
   </div>
+  {% for c in site.recepten %}
+{% if c.title == page.title %}
+  {% assign thisPost = c %}
+  {% if forloop.index == 1 %}
+    {% assign prevflag = 0 %}
+    {% assign nextflag = 1 %}
+  {% elsif forloop.index == forloop.length %}
+    {% assign prevflag = 1 %}
+    {% assign nextflag = 0 %}
+  {% else %}
+    {% assign prevflag = 1 %}
+    {% assign nextflag = 1 %}
+  {% endif %}
+{% endif %}
+{% endfor %}
+
+{% for c in site.recepten %}
+  {% if c.title == page.title %}
+    {% assign prevflag = 0 %}
+  {% endif %}
+  {% if prevflag == 1 %}
+    {% assign prevPost = c %}
+    {% assign page.previous = c %}
+  {% endif %}
+{% endfor %}
+
+{% if nextflag == 1 %}
+  {% for c in site.recepten %}
+    {% if foundPost == 1 %}
+      {% assign getNext = 1 %}
+    {% endif %}
+    {% if c.title == page.title %}
+      {% assign foundPost = 1 %}
+    {% endif %}
+    {% if getNext == 1%}
+      {% assign nextPost = c %}
+      {% assign page.next = c %}
+      {% assign foundPost = 0 %}
+      {% assign getNext = 0 %}
+    {% endif %}
+  {% endfor %}
+{% endif %}
+
+<div id="post-nav">
+  <div >
+      {% if prevPost.url %}
+      <a class="previous" href="{{prevPost.url}}">
+          <span>&lt; {{prevPost.title}}</span>
+      </a>
+      {% endif %}
+      {% if nextPost.url %}
+      <a class="next" href="{{nextPost.url}}">
+          <span>{{nextPost.title}} &gt;</span>
+      </a>
+      {% endif %}
+  </div>
+</div>
 </section>
 
 <!-- Js pullins at bottom of body -->
