--- a/_sass/general/page.sass
+++ b/_sass/general/page.sass
@@ -74,6 +74,7 @@ ul
   justify-content: center
   margin: 25px 0px
   border-radius: $bl-border-radius
+  z-index: 10
   h2, h1
     align-self: center
     color: white
@@ -82,6 +83,8 @@ ul
 .noPageTitle
   h1
     display: none
+    animation-delay: 200ms
+      display: block
 
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12
   padding: 0px
