--- a/_sass/pages/content/content.sass
+++ b/_sass/pages/content/content.sass
@@ -43,7 +43,7 @@
     a
       text-decoration: underline
 
-    // input range styling genrated from http://danielstern.ca/range.css/#/
+    // input range styling
     input[type=range]
       -webkit-appearance: none
       width: 100%
@@ -105,3 +105,22 @@
       background: $bl-green
     input[type=range]:focus::-ms-fill-upper
       background: $bl-text-color
+
+  .nextAndPrevious
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+
+  .nextAndPreviousTitleNav
+    margin-top: -50vh
+    height: 50vh
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    h1
+      margin-top: -25px
+      color: white
+      align-self: baseline
+      &:hover
+        color: $bl-hover-color
